Fix padding issue on mobile homepage

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -280,7 +280,7 @@ footer {
   }
 
   section.posts.short {
-    padding-top: 1rem;
+    padding-top: 0rem;
   }
 
   footer {
